--- a/src/components/ProductDetalles/productdetalles.css
+++ b/src/components/ProductDetalles/productdetalles.css
@@ -32,3 +32,18 @@
     font-size: 20px;
     color: rgb(220, 220, 220);
 }
+
+.boton-carrito button{
+    height: 40px;
+    width: 300px;
+    background-color:black;
+    border:1px solid white;
+    color:white;
+    border-radius: 5px;
+}
+
+.boton-carrito button:hover{
+    background-color:rgb(0,0,60);
+    border-color:rgb(0, 129, 235);
+    color:rgb(0, 129, 235);
+}
